added new stuff

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <title>clickt</title>
 </head>
 <div id="game" style='text-align:center'>
+  <div id="money">you have <text id="money"></text> money</div>
 <br>
+  <div id="mps">you gain <text id="mps"</text> money per second</div>
 <br>
+  <div id="tick">tick: 1000</div>
+  <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
 <br>
 <button id="money-creator">click to gain <text id="mpc"></text> money</button>
 </html>
