--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE! html>
 <head>
 <title>clickt</title>
+<link rel="icon" type="image/png" href="icon.jpeg"</link>
 </head>
 <div id="game" style='text-align:center'>
   <div id="money">you have <text id="money"></text> money</div>
