--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>clickt</title>
 <link rel="icon" type="image/png" href="icon.jpg"</link>
 </head>
+<body style="text-align:center" onload='gameInit()'>
 <div id="game" style='text-align:center'>
   <div id="money">you have <text id="money"></text> money</div>
 <br>
