--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br>
   <div id="mps">you gain <text id="mps"</text> money per second</div>
 <br>
-  <div id="tick">tick: 1000</div>
+  <div id="tick">tick: <text id="tick"></text></div>
   <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
 <br><br>
 <button id="money-creator">click to gain <text id="mpc"></text> money</button>
