--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <title>clickt</title>
 <link rel="icon" type="image/png" href="icon.jpg"</link>
+<script type="text/javascript" src="../js/break_infinity.min.js"> </script>
+<script type="text/javascript" src="../js/core.js"> </script>
 </head>
 <body style="text-align:center" onload='gameInit()'>
 <div id="game" style='text-align:center'>
