--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
   <div id="tick">tick: <text id="tick"></text></div>
   <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
 <br><br>
-<button id="money-creator">click to gain <text id="mpc"></text> money</button>
+<button id="money-creator" onClick="click()">click to gain <text id="mpc"></text> money</button>
 </html>
