--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body style="text-align:center" onload='gameInit()'>
 <div id="game" style='text-align:center'>
-  <div id="money">you have <text id="money"></text> money</div>
+  <div id="money">you have <text id="money">0</text> money</div>
 <br>
   <div id="mps">you gain <text id="mps"</text> money per second</div>
 <br>
-  <div id="tick">tick: <text id="tick"></text></div>
+  <div id="tick">tick: <text id="tick">1000</text></div>
   <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
 <br><br>
 <button id="money-creator" onClick="click()">click to gain <text id="mpc"></text> money</button>
