--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="game" style='text-align:center'>
   <div id="money">you have <text id="money">0</text> money</div>
 <br>
-  <div id="mps">you gain <text id="mps"</text> money per second</div>
+  <div id="mps">you gain <text id="mps"></text> money per second</div>
 <br>
   <div id="tick">tick: <text id="tick">1000</text></div>
   <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
