--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body style="text-align:center" onload='gameInit()'>
 <div id="game" style='text-align:center'>
-  <div id="money">you have <text id="money">0</text> money</div>
+  <div id="money">you have <span id="money">0</span> money</div>
 <br>
-  <div id="mps">you gain <text id="mps">0</text> money per second</div>
+  <div id="mps">you gain <span id="mps">0</span> money per second</div>
 <br>
   <div id="tick">tick: <text id="tick">1000</text></div>
   <button id="upgTick">cost: 1000 money</button><button id="buymaxTick">buy max</button>
 <br><br>
-<button id="money-creator" onClick="click()">click to gain <text id="mpc"></text> money</button>
+<button id="money-creator" onClick="click()">click to gain <span id="mpc"></span> money</button>
 </html>
